# GTO

./: .gitignore  PRD.md  README.md  UVA_DEPLOY.md  pyproject.toml  run_general.slurm  run_uva.slurm  start_ui.sh
src/gto/: __init__.py  cards.py  constants.py  state_encoder.py  types.py
src/gto/cfr/: __init__.py  outcome_sampling.py
src/gto/env/: __init__.py  vector_env.py
src/gto/eval/: __init__.py  lbr.py  lut_evaluator.py
src/gto/models/: __init__.py  networks.py
src/gto/replay/: __init__.py  reservoir.py
src/gto/train/: __init__.py  checkpointing.py  trainer.py
src/gto/ui/: app.py
src/gto/ui/static/: index.html  script.js  style.css
tests/: test_cards.py  test_checkpointing.py  test_cli.py  test_env.py  test_lbr.py  test_logging.py  test_lut_evaluator.py  test_models.py  test_reservoir.py  test_state_encoder.py  test_trainer.py
