[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gto"
version = "0.1.0"
description = "Flop and post-flop HUNL subgame solver scaffold using Deep CFR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
